--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,46 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
-# Compiled output
+# Angular CLI build output
 /dist
+/.angular
+/.angular-cache
+/.cache
 /tmp
-/out-tsc
-/bazel-out
+
+# IDEs et outils
+.idea
+.vscode
+*.sublime-workspace
+*.sublime-project
 
 # Node
 /node_modules
-npm-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+pnpm-lock.yaml
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# Environnements
+.env
+.env.local
+.env.*.local
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+# Mac / Windows / Linux spécifiques
 .DS_Store
 Thumbs.db
+ehthumbs.db
+*.swp
+*.swo
+
+# Logs
+*.log
+
+# Fichiers Git sensibles
+.git/
+!.gitignore
+
+# Export / sauvegardes
+*.zip
+*.tar.gz
+
+# Données runtime du jeu
+/src/assets/data/saves/
