Update de l'interface de recrutement et ajout des prémisses du système de combat dans CORE

--- a/src/assets/data/recruitment.config.json
+++ b/src/assets/data/recruitment.config.json
@@ -15,7 +15,7 @@
     "weaponSkillBounds": {
         "tranchante": [0, 3],
         "contondante": [0, 3],
-        "percante": [0, 3],
+        "perçante": [0, 3],
         "distance": [0, 3]
     },
     "rarityThresholds": {
